--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,46 @@ body {
         text-wrap: balance;
     }
 }
+
+/* HTML: <div class="loader"></div> */
+.loader-cube {
+    --s: 25px;
+
+    --_d: calc(0.353 * var(--s));
+    width: calc(var(--s) + var(--_d));
+    aspect-ratio: 1;
+    clip-path: polygon(
+        var(--_d) 0,
+        100% 0,
+        100% calc(100% - var(--_d)),
+        calc(100% - var(--_d)) 100%,
+        0 100%,
+        0 var(--_d)
+    );
+    background: conic-gradient(from -90deg at var(--s) var(--_d), #fff 135deg, #666 0 270deg, #aaa 0);
+    animation: l1 1s infinite cubic-bezier(0.5, 300, 0.5, -300);
+}
+@keyframes l1 {
+    50%,
+    100% {
+        transform: translateY(0.1px);
+    }
+}
+
+/* HTML: <div class="loader"></div> */
+.loader-text {
+    width: fit-content;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 30px;
+    clip-path: inset(0 3ch 0 0);
+    animation: l4 1s steps(4) infinite;
+}
+.loader-text:before {
+    content: "Loading...";
+}
+@keyframes l4 {
+    to {
+        clip-path: inset(0 -1ch 0 0);
+    }
+}
